# japa

./: .gitignore  README.md  app.py  pyproject.toml
src/japa/: __init__.py  cli.py  counting.py  journal.py  mantras.py  namavalis.py  profiles.py  sounds.py
tests/: test_counting.py
