[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pray"
version = "0.1.0"
description = "Mantra chanting (japa) counter and pronunciation trainer, built on voicekit."
requires-python = ">=3.10"
dependencies = [
    "voicekit @ git+https://github.com/AvikJainProgrammer/voicekit.git",
]

[project.scripts]
japa = "japa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
